[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bandit>=1.9.3",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-compress>=1.23",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "idna>=3.10",
    "prompt-toolkit>=3.0.51",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "urllib3>=2.6.3",
    "whodap>=0.1.14",
]
