[project]
name = "dns-tool"
version = "0.1.0"
description = "Process trampoline for DNS Tool Go server"
requires-python = ">=3.11"
dependencies = [
    "brotli>=1.2.0",
    "fonttools>=4.61.1",
    "gunicorn>=25.1.0",
    "lighthouse>=1.0.0",
    "pillow>=12.1.1",
    "pylighthouse>=0.1.0",
    "python-sonarqube-api==2.0.5",
]
