[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bandit>=1.9.3",
    "brotli>=1.2.0",
    "cssmin>=0.2.0",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-compress>=1.23",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "fonttools>=4.61.1",
    "gunicorn>=23.0.0",
    "idna>=3.10",
    "prompt-toolkit>=3.0.51",
    "psycopg2-binary>=2.9.10",
    "pytest>=9.0.2",
    "redis>=7.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "tldextract>=5.3.1",
    "urllib3>=2.6.3",
    "whodap>=0.1.14",
]
